# cpp_job2

./: CMakeLists.txt  README.md  filtr_ip_lib.cpp  filtr_ip_lib.h  main.cpp
.girhab/workflovs/: release.yml
